--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,7 +13,7 @@ body {
     margin-bottom: 5px;
 }
 
-.methodname {
+.dnerf {
   font-variant: small-caps;
 }
 
@@ -21,9 +21,6 @@ body {
 .teaser .hero-body {
   padding-top: 0;
   padding-bottom: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .teaser {
@@ -32,11 +29,7 @@ body {
 
 
 .publication-title {
-    width: 110%;
-    margin-left: -5%;
 }
-
-
 
 .publication-banner {
   max-height: parent;
@@ -87,6 +80,11 @@ body {
 
 .author-block {
   display: inline-block;
+  margin-right: 15px;
+}
+
+.author-block:last-child {
+  margin-right: 0;
 }
 
 .publication-banner img {
@@ -119,54 +117,46 @@ body {
 
 .results-carousel {
   overflow: hidden;
-  /*width: 100%;*/
 }
 
-.results-carousel .twoitem {
-    background-color: #000;
-    display: flex;
-    flex-direction: column;
-    /*flex-direction: row;*/
-    align-items: center;
-    justify-content: center;
-    height: 95%;
-    /* width: 200%; */
-    margin: 5px;
-    overflow: hidden;
-    border: 1px solid #bbb;
-    border-radius: 10px;
-    padding: 0;
-    font-size: 0;
-    box-sizing: border-box;
+.results-carousel .item {
+  margin: 5px;
+  overflow: hidden;
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  padding: 0;
+  font-size: 0;
 }
 
-.slider-navigation-previous {
-    top: 47.5%;
-    margin-top: -15px;
-    left: calc(0% + 15px);
-    box-shadow: 0 0 12px rgba(0, 0, 0, 1);
+.results-carousel video {
+  margin: 0;
 }
 
-.slider-navigation-next {
-    top: 47.5%;
-    margin-top: -15px;
-    left: calc(100% - 15px - 42px);
-    box-shadow: 0 0 12px rgba(0, 0, 0, 1);
+
+.interpolation-panel {
+  background: #f5f5f5;
+  border-radius: 10px;
 }
 
-.slider-pagination {
-    top: calc(100% - 22px);
-}
-.slider-pagination .slider-page {
-    background-color: #FFF;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 1);
+.interpolation-panel .interpolation-image {
+  width: 100%;
+  border-radius: 5px;
 }
 
-.selectable{
-    -webkit-touch-callout: all; /* iOS Safari */
-    -webkit-user-select: all; /* Safari */
-    -khtml-user-select: all; /* Konqueror HTML */
-    -moz-user-select: all; /* Firefox */
-    -ms-user-select: all; /* Internet Explorer/Edge */
-    user-select: all; /* Chrome and Opera */
+.interpolation-video-column {
+}
+
+.interpolation-panel .slider {
+  margin: 0 !important;
+}
+
+.interpolation-panel .slider {
+  margin: 0 !important;
+}
+
+#interpolation-image-wrapper {
+  width: 100%;
+}
+#interpolation-image-wrapper img {
+  border-radius: 5px;
 }
